<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10pt"
    android:orientation="vertical"
    tools:context=".packing">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180pt"
        android:layout_height="50pt"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/pack"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/to"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/to_pack"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:layout_height="40dp"
                android:textColor="@color/blue"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/name_pack"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:layout_height="40dp"
                android:textColor="@color/blue"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_gravity="center"
                android:text="@string/product_type"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spin1_pack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_weight="1"
                android:entries="@array/products"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/packno"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/packnumber_pack"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:layout_height="40dp"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/quantity"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/quantity_pack"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:layout_height="40dp"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_gravity="center"
                android:text="@string/lotnumber"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spin2_pack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_weight="1"
                android:entries="@array/lots"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="130pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm_pack"
                android:layout_width="60pt"
                android:layout_height="20pt"
                android:layout_gravity="center"
                android:layout_marginRight="10pt"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/add_lot_pack"
                android:layout_width="60pt"
                android:layout_height="20pt"
                android:layout_gravity="center"
                android:text="Fill Lots"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
