<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10pt"
    android:orientation="vertical"
    tools:context=".lot1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="LOT NUMBER 1"
        android:textColor="@color/blue"
        android:textStyle="italic"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/lot_pack"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/bag_pack"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/nobag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/nobag_pack"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/gross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/gross_pack"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/tare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/tare_pack"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/net_pack"
                android:inputType="number"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_pack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Confirm"/>

    <Button
        android:id="@+id/view_pack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="View"/>



</LinearLayout>